--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,7 +62,7 @@
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126253076-6"></script>
+<script async src=""></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
