--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -72,8 +72,219 @@
 </script>
 </head>
 <body>
- 
+ <div class="topheader">
+    <div class="container">
+       <div class="nav-top-links">
+			 <a class="first-item" href="tel:0707183645"><i class="fa fa-phone" aria-hidden="true"
+                    style="position: relative;top: 1px;"></i> 0707183645</a>
+            <a class="last-item" href="mailto:vayshinhanbankvn@gmail.com"><i class="fa fa-envelope"
+                    style="position: relative;top: 1px;"></i> vayshinhanbankvn@gmail.com</a>
+	  </div>
+    </div>
+</div>
+<div class="header"  data-scroll-index='0'>
+      <nav class="navbar navbar-default" data-spy="affix" data-offset-top="50">
+<div class="container">
+<div class="row">
+<div class="col-lg-2">
+   <div class="logo-top">
+ <a href="https://shinhanbankvay24h.com.vn/">
+   <img src="https://shinhanbankvay24h.com.vn/upload/logo/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
+ </a>
+</div>
+<div class="clear"></div>
+</div>
+<div class="col-lg-10">
+<div class="navbar-collapse collapse">
+
+<ul class="nav navbar-nav">
+
+<li>
+<a href="home">Trang Chủ </a>
+
+</li>
+
+<li>
+<a href="gioi-thieu">
+Giới Thiệu
+</a>
+</li>
+<li>
+    <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK <span class='caret'></span></a>
+              <ul class="dropdown">
+                      <li>
+            <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">
+            Vay Tiêu Dùng             </a>
+            </li>
+                    <li>
+            <a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">
+            thẻ tín dụng shinhanbank             </a>
+            </li>
+                    <li>
+            <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">
+            Vay Thế Chấp Nhà đất            </a>
+            </li>
+                    <li>
+            <a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">
+            Hỗ Trợ Công Nhân và Tự Doanh            </a>
+            </li>
+                 </ul>
+    </li>
+
+
+<li>
+    <a href="https://shinhanbankvay24h.com.vn/blog/tin-tuc-moi-nhat"> Tin Tức </a>
+     </li>
+
+
+<li>
+<a href="lien-he">
+Liên Hệ
+</a>
+</li>
+<li class="btdangkivay clickmodaldangki">
+  <span>Đăng Kí Vay</span>
+</li>
+</ul>
+
+
+</div>
+</div>
+
+</div>
+</div>
+
+<div class="ci_stripe">
+          <div class="ci_stripe_righthalf"></div>
+          <div class="ci_stripe_in wrap"></div>
+</div>
+
+</nav>
+<!-- mua ngay -->
+
+
+<!-- mua ngay -->
+<!-- giao diện menu mobile -->
+<div class="show-mobile click-menu-mobile">
+    <span class="logo-mobile">
+	   <a href="https://shinhanbankvay24h.com.vn/">
+        <img src="https://shinhanbankvay24h.com.vn/upload/logo/d820177c68495c03510bbad2554cd365.png" alt="logo" style="position: relative;top: 2px"/>
+      </a>
+	</span>
+	<span class="icon-bar-mobile">
+	    <i class="fa fa-bars" aria-hidden="true"></i>
+	</span>
+    <div class="clear"></div>
+</div>
+<div id='cssmenu'>
+
+<ul class="show-mobile-ul">
+     <li>
+        <a href="home">Trang Chủ </a>
+        
+        </li>
+		<li>
+        <a href="gioi-thieu">Giới Thiệu </a>
+        
+        </li>
+                <li>
+            <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK</a>
+                              <ul>
+                                      <li>
+                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung->">
+                    Vay Tiêu Dùng                     </a>
+                    </li>
+                                    <li>
+                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank->">
+                    thẻ tín dụng shinhanbank                     </a>
+                    </li>
+                                    <li>
+                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat>">
+                    Vay Thế Chấp Nhà đất                    </a>
+                    </li>
+                                    <li>
+                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh>">
+                    Hỗ Trợ Công Nhân và Tự Doanh                    </a>
+                    </li>
+                                 </ul>
+                    </li>
+                
+        
+                <li>
+            <a href="https://shinhanbankvay24h.com.vn/blog/tin-tuc-moi-nhat"> Tin Tức</a>
+                     </li>
+                
+        
+        <li>
+        <a href="lien-he">
+        Liên Hệ
+        </a>
+        </li>
+</ul>
+</div></div>
+
     {{{body}}}
+
+
+ <script type="text/javascript" src="/public/js/owl.carousel.min.js"></script>
+<script type="text/javascript" src="/public/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/public/js/bootstrap-select.min.js"></script>
+
+<!--<script type="text/javascript" src="js/ion.rangeSlider.js"></script> tam thoi ẩn-->
+<script type="text/javascript" src="/public/js/jquery.themepunch.revolution.min.js"></script>
+<script type="text/javascript" src="/public/js/jquery.themepunch.tools.min.js"></script>
+<script type="text/javascript" src="/public/js/nivo-lightbox.js"></script>
+<script type="text/javascript" src="/public/js/slick.min.js"></script>
+<script type="text/javascript" src="/public/js/jquery.slicknav.js"></script>
+<script type="text/javascript" src="/public/js/navmobile.js"></script>
+<!-- zoom -->
+<script type="text/javascript" src="/public/js/jquery.lazyload.js"></script>
+<script type="text/javascript" src="/public/js/main.js"></script>
+<script type="text/javascript" src="/public/js/ajax.js"></script>
+<script type="text/javascript" src="/public/js/jquery.raty-fa.js"></script>
+<script type="text/javascript" src="/public/js/scrollIt.min.js"></script>
+<script type="text/javascript" src="/public/js/jquery.flashy.min.js"></script>
+<script type="text/javascript" src="/public/js/mainimg.js"></script>
+<!-- giờ -->
+<script type="text/javascript" src="/public/js/jquery.countdown.min.js"></script>
+<!-- fix height -->
+<script type="text/javascript" src="/public/js/jquery.equalize.min.js"></script>
+<!-- scroll fixed -->
+<script type="text/javascript" src="/public/js/number-divider.js"></script>
+<script type="text/javascript">
+
+var base_url="http://localhost:3000";
+//number format
+$('.sotienvay').divide({delimiter: ',',
+	divideThousand: false});
+//lazyload
+ $("img.lazy" ).each(function(){
+     $(this).attr("data-original", $(this).attr("src"));
+     $(this).attr("src","https://shinhanbankvay24h.com.vn/upload/icon/loadingpage.jpg");
+ });
+ $("img.lazyleft" ).each(function(){
+     $(this).attr("data-original", $(this).attr("src"));
+     $(this).attr("src",'https://shinhanbankvay24h.com.vn/upload/icon/loadingpage.jpg');
+ });
  
+ $(function() {
+     $("img.lazy").lazyload({
+             effect : "fadeIn",
+             threshold:100,
+     });
+     $("img.lazyleft").lazyload({
+         effect : "fadeIn",
+         threshold:900,
+    });
+     
+     $('.checkrating').raty({ scoreName: 'entity[score]' });
+     $('.danhgia').raty({ readOnly: true, score:function() {
+		    return $(this).attr('data-score');
+	  } });
+     $.scrollIt()
+     
+ });
+ 
+ </script>
 </body>
 </html>
