--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -444,7 +444,7 @@
     <div class="container">
         <div class="row">
             <div class="title-text-vaytindung title-mr-70">
-                <h2>TẠI SAO NÊN CHỌN TPBANK</h2>
+                <h2>TẠI SAO NÊN CHỌN SHINHANBANK</h2>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
                 <div class="item equalize">
@@ -483,7 +483,6 @@
                 <div class="block-subscribe">
                     <h3 class="widget-title">Giới Thiệu</h3>
                     <p>
-                    <p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
                     <p>Hotline: 0707183645</p>
                     </p>
                 </div>
@@ -507,19 +506,6 @@
                     <input type="text" class="form-control textdangki" name="email" placeholder="Vui Lòng Nhập Email"
                         style="margin-bottom: 5px">
                     <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
-                </div>
-            </div>
-            <div class="col-md-3 col-sm-6">
-                <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
-                <div class="fb-page"
-                    data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689"
-                    data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true"
-                    data-hide-cover="false" data-show-facepile="true">
-                    <blockquote
-                        cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689"
-                        class="fb-xfbml-parse-ignore"><a
-                            href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a>
-                    </blockquote>
                 </div>
             </div>
         </div>
@@ -705,24 +691,6 @@
         </div>
     </div>
 </div><a href="#" class="back-to-top">
-    <i class="icon-arrow-up"></i>
+    <i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
 
-<!--phone-->
-<div class="box-tool-utilities">
-    <a class="buttons tootip" href="tel:0707183645">
-        <i class="fa fa-phone" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-phone"><strong>0707183645</strong></span>
-    </a>
-    <a class="buttons tootip" href="mailto:vayshinhanbankvn@gmail.com" rel="nofollow" target=”_blank”>
-        <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-mail"><strong>vayshinhanbankvn@gmail.com</strong></span>
-    </a>
-    <a class="buttons tootip"
-        href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689"
-        rel="nofollow" target=”_blank”>
-        <i class="fa fa-facebook-official" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-mail"><strong>Chat Facebook</strong></span>
-    </a>
-</div>
-<!-- end-->
