--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -99,7 +99,6 @@
 <div class="col-md-3 col-sm-6">
 <div class="block-subscribe">
 <h3 class="widget-title">Giới Thiệu</h3>
-<p><p>24C Phan Đăng Lưu, Phường 6, Quận Bình Thạnh, HCM</p>
 <p>Hotline: 0862505919</p></p>
 </div>
 </div>
@@ -120,10 +119,7 @@
       <button type="button" class="btn btn-common clickdangki">Đăng Kí</button>
 </div>
 </div>
-<div class="col-md-3 col-sm-6">
-     <h3 class="widget-title">Kết Nối Với Chúng Tôi</h3>
-     <div class="fb-page" data-href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" data-tabs="timeline" data-height="120" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689">Facebook</a></blockquote></div>
-</div>
+
 </div>
 </div>
 </footer>
@@ -201,7 +197,7 @@
                 <div class="row">
                    <div class="title-text-vaytindung" style="margin-top: 30px;">
 			        <h2>Đăng Kí Vay Tiêu Dùng</h2>
-					<form action="https://shinhanbankvay24h.com.vn/dichvu/dangki" method="post" class="formdangki">
+					<form method="post" class="formdangki">
 					<div class="wrap-modal-vaytieudung">
 						<div class="panel-cart-group">
 							<span class="panel-cart-text">Họ Và Tên (*):</span>
@@ -300,22 +296,6 @@
         </div>
     </div>
 </div><a href="#" class="back-to-top">
-<i class="icon-arrow-up"></i>
+<i class="fa fa-arrow-up" aria-hidden="true"></i>
 </a>
  
-<!--phone-->
-<div class="box-tool-utilities">
-    <a class="buttons tootip" href="tel:0862505919">
-	    <i class="fa fa-phone" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-phone"><strong>0862505919</strong></span>
-    </a>
-    <a class="buttons tootip" href="mailto:shinhanbankvay24h@gmail.com" rel="nofollow" target=”_blank”>
-	    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-mail"><strong>shinhanbankvay24h@gmail.com</strong></span>
-    </a>
-    <a class="buttons tootip" href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689" rel="nofollow" target=”_blank”>
-	    <i class="fa fa-facebook-official" aria-hidden="true"></i>
-        <span class="tooltip-contact tooltip-mail"><strong>Chat Facebook</strong></span>
-    </a>
-</div>
-<!-- end-->
