--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -110,7 +110,8 @@ Giới Thiệu
 </a>
 </li>
 <li>
-    <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK <span class='caret'></span></a>
+    <a href="https://shinhanbankvay24h.com.vn/tien-ich/san-pham-dich-vu-shinhanbank"> SẢN PHẨM DỊCH VỤ SHINHANBANK &nbsp<i class="fa fa-chevron-down" aria-hidden="true"></i>
+</a>
               <ul class="dropdown">
                       <li>
             <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">
@@ -133,7 +134,7 @@ Giới Thiệu
 
 
 <li>
-    <a href="https://shinhanbankvay24h.com.vn/blog/tin-tuc-moi-nhat"> Tin Tức </a>
+    <a href="tin-tuc"> Tin Tức </a>
      </li>
 
 
@@ -211,7 +212,7 @@ Liên Hệ
                 
         
                 <li>
-            <a href="https://shinhanbankvay24h.com.vn/blog/tin-tuc-moi-nhat"> Tin Tức</a>
+            <a href="tin-tuc"> Tin Tức</a>
                      </li>
                 
         
@@ -225,6 +226,25 @@ Liên Hệ
 
     {{{body}}}
 
+
+<!--phone-->
+<div class="box-tool-utilities">
+    <a class="buttons tootip" href="tel:0707183645">
+        <i class="fa fa-phone" aria-hidden="true"></i>
+        <span class="tooltip-contact tooltip-phone"><strong>0707183645</strong></span>
+    </a>
+    <a class="buttons tootip" href="mailto:vayshinhanbankvn@gmail.com" rel="nofollow" target=”_blank”>
+        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+        <span class="tooltip-contact tooltip-mail"><strong>vayshinhanbankvn@gmail.com</strong></span>
+    </a>
+    <a class="buttons tootip"
+        href="https://www.facebook.com/H%E1%BB%97-tr%E1%BB%A3-vay-v%E1%BB%91n-ng%C3%A2n-h%C3%A0ng-100428818344689"
+        rel="nofollow" target=”_blank”>
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+        <span class="tooltip-contact tooltip-mail"><strong>Chat Facebook</strong></span>
+    </a>
+</div>
+<!-- end-->
 
  <script type="text/javascript" src="/public/js/owl.carousel.min.js"></script>
 <script type="text/javascript" src="/public/js/bootstrap.min.js"></script>
