Minor href change

--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -44,7 +44,7 @@
                     <input type="text" name="name" class="form-control maillienhe" value="" required="">
             </div>
             <div class="panel-cart-group">
-                    <span class="panel-cart-text">Tin Của Bạn:</span>
+                    <span class="panel-cart-text">Tin Nhắn Liên Hệ Của Bạn:</span>
                     <textarea class="form-control tinnhanlienhe" name="message" style="height: 90px;"></textarea>
              </div>
              <button type="button" class="btn btn-common clicklienhe">Gửi</button>
