--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,12 +1,12 @@
 <div class="slider-full">
     <div class="touch-slider owl-carousel owl-loaded" data-slider-pagination="true">
         <div class="item">
-            <a href="https://shinhanbankvay24h.com.vn/"><img
+            <a href="home"><img
                     src="https://shinhanbankvay24h.com.vn/upload/slider/dff7290ad75168b8ae2014e28e5ce41f.jpg"
                     alt="vay nhanh tín dụng"></a>
         </div>
         <div class="item">
-            <a href="https://shinhanbankvay24h.com.vn/"><img
+            <a href="home"><img
                     src="https://shinhanbankvay24h.com.vn/upload/slider/8b12544a774c93b32258bf6131cd8e12.png"
                     alt="phê duyệt nhanh "></a>
         </div>
@@ -24,7 +24,7 @@
             </div>
             <div class="wrap-item-home">
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">
+                    <a href="#">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c89343e945eea8eddccbefdd47c1c766.png"
@@ -38,7 +38,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">
+                    <a href="#">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/cf3c612d0921b472a062636dc7a58fdd.jpg"
@@ -54,7 +54,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">
+                    <a href="#">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/c83ecd8d31c050cf081e159111e7a696.jfif"
@@ -68,7 +68,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12 paddingweb">
-                    <a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">
+                    <a href="#">
                         <div class="item-home equalize">
 
                             <img src="https://shinhanbankvay24h.com.vn/upload/catalog/5b0e3eb901f2da618e175595c96ee068.jpg"
@@ -281,7 +281,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">
+                            href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/a249c6cb182ab86936dba6f1d289692e.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/a249c6cb182ab86936dba6f1d289692e.jpg"
@@ -293,7 +293,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="https://shinhanbankvay24h.com.vn/blog-tin/quy-khach-se-de-dang-tiep-can-goi-vay-cua-shinhan-bank-">Quý
+                                href="#">Quý
                                 khách sẽ dễ dàng tiếp cận gói vay của ...</a></h3>
                         <p>Quý khách đang có nhu cầu Vay tiêu dùng Ngân hàng nhưng còn thắc mắc về Điều kiện ...</p>
 
@@ -304,7 +304,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">
+                            href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/ab03c4fdadadd4157f0073850ce3d832.png"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/ab03c4fdadadd4157f0073850ce3d832.png"
@@ -316,7 +316,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap-ngan-hang-shinhan-bank-khong-the-chap-tai-san-lai-suat-thap-nhat-thi-truong">Vay
+                                href="#">Vay
                                 tín chấp ngân hàng Shinhan Bank không thế chấp ...</a></h3>
                         <p>Với mục đích đáp ứng nhu cầu vay tiêu dùng, không cần thế chấp tài sản hay người ...</p>
 
@@ -326,7 +326,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12 paddingweb ">
                 <div class="blog-item">
                     <div class="blog-img">
-                        <a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">
+                        <a href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/3b05f83f529e3602eef89682a41678db.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/3b05f83f529e3602eef89682a41678db.jpg"
@@ -337,7 +337,7 @@
                     </div>
                     <div class="blog-info">
 
-                        <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/rut-tien-TTdung">RÚT TIỀN MẶT THẺ TÍN
+                        <h3><a href="#">RÚT TIỀN MẶT THẺ TÍN
                                 DỤNG LÃI SUẤT ƯU ĐÃI ...</a></h3>
                         <p>Rút Tiền Mặt Từ Thẻ Tín Dụng Với Hạn Mức 100%. Rút Tiền Mặt Thẻ Tín Dụng ...</p>
 
@@ -348,7 +348,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">
+                            href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/a188add40d415a128d9b4ffbdb68f632.JPG"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/a188add40d415a128d9b4ffbdb68f632.JPG"
@@ -360,7 +360,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="https://shinhanbankvay24h.com.vn/blog-tin/vay-tin-chap--vay-tieu-dung-ngan-hang-shinhanbank">Vay
+                                href="#">Vay
                                 tín chấp - Vay tiêu dùng ngân hàng Shinhanbank.</a></h3>
                         <p>Vay tín chấp tiêu dùng ngân hàng Shinhanbank. </p>
 
@@ -370,7 +370,7 @@
             <div class="col-md-3 col-sm-6 col-xs-12 paddingweb ">
                 <div class="blog-item">
                     <div class="blog-img">
-                        <a href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">
+                        <a href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/bd6eaab62077069666f51a3d203f2f2a.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/bd6eaab62077069666f51a3d203f2f2a.jpg"
@@ -382,7 +382,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="https://shinhanbankvay24h.com.vn/blog-tin/tung-bung-khai-truong-nhan-nghin-qua-tang">Tưng
+                                href="#">Tưng
                                 bừng khai trương, nhận nghìn quà tặng</a></h3>
                         <p>Tưng bừng khai trương, nhận nghìn quà tặng</p>
 
@@ -393,7 +393,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">
+                            href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/279cf4dee50aae9998c6ec8e87e25e59.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/279cf4dee50aae9998c6ec8e87e25e59.jpg"
@@ -405,7 +405,7 @@
                     <div class="blog-info">
 
                         <h3><a
-                                href="https://shinhanbankvay24h.com.vn/blog-tin/thoa-trai-nghiem--hoan-trieu-diem-danh-cho-khach-hang-doanh-nghiep-hien-huu">Thỏa
+                                href="#">Thỏa
                                 trải nghiệm - Hoàn triệu điểm (Dành cho Khách ...</a></h3>
                         <p>Tặng đến 5 triệu điểm thưởng dành cho Khách hàng Thẻ tín dụng Doanh nghiệp Shinhan</p>
 
@@ -416,7 +416,7 @@
                 <div class="blog-item">
                     <div class="blog-img">
                         <a
-                            href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">
+                            href="#">
                             <img class="lazy"
                                 data-original="https://shinhanbankvay24h.com.vn/upload/product/34e6bd2320923ac2c0ef7e6189a20833.jpg"
                                 src="https://shinhanbankvay24h.com.vn/upload/news/34e6bd2320923ac2c0ef7e6189a20833.jpg"
@@ -427,7 +427,7 @@
                     </div>
                     <div class="blog-info">
 
-                        <h3><a href="https://shinhanbankvay24h.com.vn/blog-tin/niem-tin-cua-nguoi-dung-lam-nen-suc-manh-cua-ngan-hang-shinhan">
+                        <h3><a href="#">
                         Niềm tin của người dùng làm nên sức mạnh của ...</a></h3>
                         <p>Ngân hàng TNHH MTV Shinhan Việt Nam (Ngân hàng Shinhan) là một trong những ngân hàng nước
                             ngoài ...</p>
@@ -490,12 +490,12 @@
             <div class="col-md-3 col-sm-6">
                 <h3 class="widget-title">SẢN PHẨM DỊCH VỤ SHINHANBANK</h3>
                 <ul>
-                    <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-tieu-dung-">Vay Tiêu Dùng </a></li>
-                    <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/the-tin-dung-shinhanbank-">thẻ tín dụng
+                    <li><a href="#">Vay Tiêu Dùng </a></li>
+                    <li><a href="#">thẻ tín dụng
                             shinhanbank </a></li>
-                    <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/vay-the-chap-nha-dat">Vay Thế Chấp Nhà
+                    <li><a href="#">Vay Thế Chấp Nhà
                             đất</a></li>
-                    <li><a href="https://shinhanbankvay24h.com.vn/tien-ich/ho-tro-cong-nhan-va-tu-doanh">Hỗ Trợ Công
+                    <li><a href="#">Hỗ Trợ Công
                             Nhân và Tự Doanh</a></li>
 
                 </ul>
