--- a/views/news.handlebars
+++ b/views/news.handlebars
@@ -8,7 +8,7 @@
                    <a href=""> Trang mữ</a>
                    <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Thời Trang Nam</span>  -->
-                   <a href="https://shinhanbankvay24h.com.vn/"><i class="icon-home"></i> Trang Chủ</a>
+                   <a href="https://shinhanbankvay24h.com.vn/"><i class="fa fa-home"></i> Trang Chủ</a>
                                        <span class="crumbs-spacer"><i class="fa fa-angle-double-right"></i></span>
                    <span class="current">Tin Tức</span>
                 </div>
